pp2/samples/bad1.out

*** Error line 1.
void foo(int) {
            ^
*** parse error

